--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-test
+<!doctype html>
+<html ng-app="todoList">
+<head>
+    <meta charset="UTF-8">
+    <title>todoList</title>
+</head>
+<body ng-controller="TaskCtrl">
+<div>
+    <input ng-model="task" type="text"  />
+    <button ng-click="add()">提交</button>
+</div>
+<h4>任务列表</h4>
+<ul>
+    <li ng-repeat="item in tasks track by $index">{{item}}</li>
+</ul>
+
+<hr>
+<input type="text" ng-model="name">
+<span>My Name is：</span> {{name}}
+
+<script src="js/angular.min.js"></script>
+<script>
+    angular.module('todoList',[])
+            .controller('TaskCtrl',function($scope){
+                $scope.task = "";
+                $scope.tasks = [];
+                $scope.add = function(){
+                    $scope.tasks.push($scope.task);
+                }
+            })
+</script>
+
+
+</body>
+</html>
